--- a/testProjects/junit5-jupiter-starter-gradle/build.gradle
+++ b/testProjects/junit5-jupiter-starter-gradle/build.gradle
@@ -7,12 +7,20 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
-	implementation files('libs/a.jar')
-	testImplementation(platform('org.junit:junit-bom:5.9.2'))
-	testImplementation('org.junit.jupiter:junit-jupiter')
-}
 
-test {
-	useJUnitPlatform()
+if (org.gradle.util.GradleVersion.current().compareTo(org.gradle.util.GradleVersion.version("4.6")) >= 0) {
+	dependencies {
+		implementation files('libs/a.jar')
+		testImplementation(platform('org.junit:junit-bom:5.9.2'))
+		testImplementation('org.junit.jupiter:junit-jupiter')
+	}
+
+	test {
+		useJUnitPlatform()
+	}
+} else {
+	dependencies {
+		compile files('libs/a.jar')
+		testCompile('org.junit.jupiter:junit-jupiter:5.9.2')
+	}
 }
