fix - Unsupported class file for the build action class (#170)
- Move the GetSourceSetsAction class to the model module, to ensure that
  the GetSourceSetsAction class is compiled on level 1.8.
- Set the required properties to the BuildActionExecuter.

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -20,6 +20,7 @@ java {
 }
 
 jar {
+  dependsOn ':model:jar'
   from {
     configurations.bundled.collect {
       it.isDirectory() ? it : zipTree(it)
