--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,3 +1,11 @@
+plugins {
+    id 'java-library'
+}
+
 java {
   sourceCompatibility = JavaVersion.VERSION_1_8
+}
+
+dependencies {
+    api 'org.gradle:gradle-tooling-api:8.8'
 }
